samples/_failures_safe/1761214215_593685_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a8ec8fd.c: In function ‘main’:
./samples/SAFE/__tmp_5a8ec8fd.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_5a8ec8fd.c:200:9: error: expected declaration or statement at end of input
